--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,13 +19,6 @@
   border: 1rem;
   border-radius: 3rem; }
 
-.key4-contacto {
-  background-image: url("..recursos/contacto/contacto__6.jpg");
-  width: 30rem;
-  height: 20rem;
-  border: 1rem;
-  border-radius: 3rem; }
-
 header {
   display: flex;
   flex-wrap: wrap;
@@ -109,10 +102,6 @@ footer {
     flex-direction: row; }
     footer__redes a {
       margin: 1rem; }
-
-.header__logo {
-  width: 15vw;
-  height: 10vh; }
 
 .instagram {
   width: 2.75rem;
@@ -207,7 +196,6 @@ span a:hover {
   .indexTexto__p {
     font-size: 1.25rem; }
   .linkContactoIndex {
-    color: white;
     padding-top: 1rem;
     padding-bottom: 1.5rem;
     margin-left: 1rem; }
@@ -228,10 +216,8 @@ span a:hover {
     margin-left: 0.5rem;
     margin-right: 1rem; }
   .indexTexto {
-    display: flex;
-    flex-direction: column;
     font-size: 0.5rem;
-    gap: 2rem;
+    gap: 1rem;
     margin-left: 1rem;
     margin-right: 1rem;
     margin-bottom: 1rem;
@@ -244,24 +230,13 @@ span a:hover {
     padding-bottom: 2rem;
     margin-left: 1rem; }
   .btn {
-    background-color: white;
     width: 8rem;
     height: 4rem;
-    color: black;
     font-size: 1.5rem;
     padding: 0.75rem;
     border-radius: 10rem;
     margin-left: 10rem;
-    margin-right: 15rem;
-    margin-bottom: 3rem; }
-    .btn:hover {
-      transform: scale(1.2);
-      background-color: #1d2925;
-      padding: 1rem; }
-  .btn__texto {
-    color: black; }
-    .btn__texto:hover {
-      color: white; } }
+    margin-right: 15rem; } }
 
 .nosotrosTituloh2 {
   text-align: center;
@@ -359,7 +334,7 @@ span a:hover {
   border-radius: 5%;
   padding: 1rem; }
 
-.grid__container__nosotros2.grid__item .grid__uno {
+.grid__container__nosotros2.grid__uno {
   grid-row: 1/2;
   grid-column: 1/2;
   background-position: inherit;
@@ -401,7 +376,7 @@ span a:hover {
   border-radius: 5%; }
 
 .imagenCaphai {
-  width: 32rem;
+  width: 42rem;
   height: 25rem;
   border-radius: 5%; }
 
@@ -454,9 +429,6 @@ span a:hover {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
     margin-top: 0.5rem; }
-    .grid__container__nosotros1 .grid__texto {
-      font-size: 1.5rem;
-      color: #faf3f3; }
   .nosotrosTituloh3 {
     font-size: 1.25rem;
     padding: 2rem;
@@ -497,11 +469,11 @@ span a:hover {
   .grid__container__nosotros1 {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 12rem 12rem 15rem;
-    gap: 1rem;
+    grid-template-rows: 12rem 12rem 12rem;
+    gap: 0.5rem;
     padding-top: 0.25rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem; }
   .texto {
@@ -528,37 +500,22 @@ span a:hover {
     margin-right: 1rem; }
   .grid__container__nosotros2.grid__uno {
     grid-row: 1/2;
-    grid-column: 1/1;
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    grid-column: 1/1; }
   .grid__container__nosotros2 .grid__dos {
     grid-row: 2/3;
     grid-column: 1/1;
-    background-image: url("../recursos/nosotros_5.jpg");
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    background-image: url("../recursos/nosotros_5.jpg"); }
   .grid__container__nosotros2 .grid__cuatro {
     grid-row: 3/4;
-    grid-column: 1/1;
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    grid-column: 1/1; }
   .grid__container__nosotros2 .grid__tres {
     grid-row: 4/5;
     grid-column: 1/1;
-    background-image: url("../recursos/nosotros_6.png");
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    background-image: url("../recursos/nosotros_6.png"); }
   .grid__container__nosotros2 .grid__cinco .p__link {
     grid-row: 5/6;
     grid-column: 1/1;
-    background-image: url("../recursos/caphai.png");
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    background-image: url("../recursos/caphai.png"); }
   .imagenCaphai {
     width: 20em;
     height: 15rem;
@@ -574,24 +531,13 @@ span a:hover {
     margin-left: 0.75rem;
     text-align: center; }
   .btn__nosotros {
-    background-color: white;
-    width: 8rem;
     height: 4rem;
     color: black;
     font-size: 1.5rem;
     padding: 0.75rem;
-    border-radius: 10rem;
     margin-left: 9rem;
     margin-right: 15rem;
-    margin-bottom: 3rem; }
-    .btn__nosotros:hover {
-      transform: scale(1.2);
-      background-color: #1d2925;
-      padding: 1rem; }
-  .btn__nosotros__texto {
-    color: black; }
-    .btn__nosotros__texto:hover {
-      color: white; } }
+    margin-bottom: 3rem; } }
 
 .galeriaTituloh2 {
   padding: 2rem;
@@ -714,11 +660,7 @@ span a:hover {
     width: 9.09091rem;
     height: 4.54545rem;
     margin-left: 13rem;
-    padding: 0.5rem; }
-  .btn__galeria__texto {
-    color: black; }
-    .btn__galeria__texto:hover {
-      color: white; } }
+    padding: 0.5rem; } }
 
 @media (min-width: 320px) and (max-width: 540px) {
   .galeriaTituloh2 {
@@ -742,24 +684,13 @@ span a:hover {
     padding-bottom: 2rem;
     text-align: center; }
   .btn__galeria {
-    background-color: white;
     width: 8rem;
     height: 4rem;
-    color: black;
     font-size: 1.5rem;
     padding: 0.75rem;
-    border-radius: 10rem;
     margin-left: 9rem;
     margin-right: 15rem;
-    margin-bottom: 3rem; }
-    .btn__galeria:hover {
-      transform: scale(1.2);
-      background-color: #1d2925;
-      padding: 1rem; }
-  .btn__galeria__texto {
-    color: black; }
-    .btn__galeria__texto:hover {
-      color: white; } }
+    margin-bottom: 3rem; } }
 
 .actitudTituloh2 {
   margin-left: 25rem;
@@ -782,14 +713,14 @@ span a:hover {
   margin-left: 8rem;
   margin-right: 8rem; }
 
-.container-fluid1 .grid__item .grid__uno {
+.container-fluid1 .grid__uno {
   grid-row: 1/2;
   grid-column: 1/2;
   background-position: inherit;
   background-size: cover;
   background-repeat: no-repeat; }
 
-.container-fluid1 .grid__item .grid__dos {
+.container-fluid1 .grid__dos {
   grid-row: 1/2;
   grid-column: 2/3;
   background-position: inherit;
@@ -840,7 +771,7 @@ span a:hover {
 
 .imagenActitud {
   width: 40rem;
-  height: 30rem;
+  height: 25rem;
   border: solid wheat;
   border-radius: 5%; }
 
@@ -895,18 +826,12 @@ span a:hover {
     padding-bottom: 0.10rem;
     margin-left: 2rem;
     margin-right: 1rem; }
-  .container-fluid1 .grid__item .grid__uno {
+  .container-fluid1 .grid__uno {
     grid-row: 1/2;
-    grid-column: 1/1;
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat; }
-  .container-fluid1 .grid__item .grid__dos {
+    grid-column: 1/1; }
+  .container-fluid1 .grid__dos {
     grid-row: 2/3;
-    grid-column: 1/1;
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    grid-column: 1/1; }
   .container__texto {
     font-size: 1.25rem; }
   .container__actitud2 {
@@ -927,7 +852,7 @@ span a:hover {
     padding-top: 1em;
     margin-left: 1rem;
     margin-right: 1rem; }
-  .grid__container__actitud3 .grid__item.grid__dos {
+  .grid__container__actitud3 .grid__dos {
     margin-right: 1rem;
     grid-row: 2/3;
     grid-column: 1/1; }
@@ -935,7 +860,7 @@ span a:hover {
     width: 80%;
     height: 5rem;
     margin-right: 1rem; }
-  .grid__container__actitud3 .grid__item .grid__uno {
+  .grid__container__actitud3 .grid__uno {
     grid-row: 1/2;
     grid-column: 1/1; }
   .imagenActitud {
@@ -950,11 +875,7 @@ span a:hover {
     width: 9.09091rem;
     height: 4.54545rem;
     margin-left: 13rem;
-    padding: 0.5rem; }
-  .btn__actitud__texto {
-    color: black; }
-    .btn__actitud__texto:hover {
-      color: white; } }
+    padding: 0.5rem; } }
 
 @media (min-width: 320px) and (max-width: 540px) {
   .actitudTituloh2 {
@@ -977,10 +898,10 @@ span a:hover {
     padding-bottom: 0.10rem;
     margin-left: 1rem;
     margin-right: 1rem; }
-  .container-fluid1 .grid__item .grid__uno {
+  .container-fluid1 .grid__uno {
     grid-row: 1/2;
     grid-column: 1/1; }
-  .container-fluid1 .grid__item .grid__dos {
+  .container-fluid1 .grid__dos {
     grid-row: 2/3;
     grid-column: 1/1; }
   .container__texto {
@@ -999,7 +920,7 @@ span a:hover {
   .container__actitud3 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 15rem 30rem;
+    grid-template-rows: 15rem 19rem;
     gap: 1rem;
     padding-top: 2rem;
     padding-bottom: 0.10rem;
@@ -1008,10 +929,10 @@ span a:hover {
   .grid__item .grid__dos .imagen {
     width: 10rem;
     height: 5rem; }
-  .grid__container__actitud3 .grid__item .grid__uno {
+  .grid__container__actitud3 .grid__uno {
     grid-row: 1/2;
     grid-column: 1/1; }
-  .grid__container__actitud3 .grid__item.grid__dos {
+  .grid__container__actitud3.grid__dos {
     grid-row: 2/3;
     grid-column: 1/1; }
   .imagenActitud {
@@ -1024,24 +945,14 @@ span a:hover {
     padding-bottom: 2rem;
     text-align: center; }
   .btn__actitud {
-    background-color: white;
     width: 8rem;
     height: 4rem;
-    color: black;
     font-size: 1.5rem;
     padding: 0.75rem;
     border-radius: 10rem;
     margin-left: 10rem;
     margin-right: 15rem;
-    margin-bottom: 3rem; }
-    .btn__actitud:hover {
-      transform: scale(1.2);
-      background-color: #1d2925;
-      padding: 1rem; }
-  .btn__actitud__texto {
-    color: black; }
-    .btn__actitud__texto:hover {
-      color: wheat; } }
+    margin-bottom: 3rem; } }
 
 .contactoTituloh2 {
   text-align: center;
@@ -1097,7 +1008,7 @@ span a:hover {
 .grid__container__contacto .grid__tres {
   grid-row: 2/3;
   grid-column: 2/3;
-  background-image: url("../recursos/contacto/contacto__5.jpg");
+  background-image: url("../recursos/contacto/contacto__3.jpg");
   background-position: inherit;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1146,8 +1057,7 @@ span a:hover {
   width: 30rem;
   height: 20rem;
   text-align: center;
-  margin-left: 20rem;
-  margin-right: 15rem;
+  margin-left: 30rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
   border-radius: 7%; }
@@ -1177,44 +1087,35 @@ span a:hover {
     grid-column: 1/2;
     margin: auto;
     width: 15rem;
-    height: 15rem;
-    background-image: url("../recursos/contacto/contacto__1.jpg");
-    border: solid white; }
+    height: 15rem; }
   .grid__container__contacto .grid__uno__texto {
     font-size: 1rem;
     grid-row: 1/2;
     width: 15rem;
     height: 15rem;
-    grid-column: 2/3;
-    border: solid white; }
+    grid-column: 2/3; }
   .grid__container__contacto .grid__dos {
     grid-row: 2/3;
     grid-column: 1/2;
     width: 15rem;
-    height: 15rem;
-    background-image: url("../recursos/contacto/contacto__2.jpg");
-    border: solid white; }
+    height: 15rem; }
   .grid__container__contacto .grid__tres {
     grid-row: 2/3;
     grid-column: 2/3;
     width: 15rem;
-    height: 15rem;
-    background-image: url("../recursos/contacto/contacto__5.jpg");
-    border: solid white; }
+    height: 15rem; }
   .grid__container__contacto .grid__dos__texto {
     font-size: 1rem;
     grid-row: 3/4;
     grid-column: 1/2;
     width: 15rem;
-    height: 5rem;
-    border: solid white; }
+    height: 5rem; }
   .grid__container__contacto .grid__item.grid__tres__texto {
     font-size: 1rem;
     grid-row: 3/4;
     grid-column: 2/3;
     width: 15rem;
-    height: 5rem;
-    border: solid white; }
+    height: 5rem; }
   .textoGrid1 {
     font-size: 0.8rem; }
   .textoGrid {
@@ -1225,23 +1126,17 @@ span a:hover {
     margin-left: 3rem;
     text-align: center; }
   .imput {
-    background-color: #1d2925;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     font-size: 2rem;
     padding: 1rem;
     width: 23rem;
     height: 17rem;
-    text-align: center;
     margin-left: 6.5rem;
     margin-right: 4rem;
     margin-top: 2rem;
     margin-bottom: 2rem; }
   .imput .contacto__imput {
     font-size: 1rem;
-    padding: 0.50rem;
-    color: white; } }
+    padding: 0.50rem; } }
 
 @media (min-width: 320px) and (max-width: 540px) {
   .contactoTituloh2 {
@@ -1265,58 +1160,31 @@ span a:hover {
     grid-row: 1/2;
     grid-column: 1/1;
     width: 20rem;
-    height: 20rem;
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url("../recursos/contacto/contacto__1.jpg");
-    border: solid white; }
+    height: 20rem; }
   .grid__container__contacto .grid__uno__texto {
     grid-row: 2/3;
     grid-column: 1/1;
     width: 20rem;
-    height: 17rem;
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border: solid white; }
+    height: 17rem; }
   .grid__container__contacto .grid__dos {
     grid-row: 3/4;
     grid-column: 1/1;
     width: 20rem;
-    height: 20rem;
-    background-image: url("../recursos/contacto/contacto__2.jpg");
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border: solid white; }
+    height: 20rem; }
   .grid__container__contacto .grid__tres {
     grid-row: 4/5;
     grid-column: 1/1;
     width: 20rem;
-    height: 20rem;
-    background-image: url("../recursos/contacto/contacto__5.jpg");
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border: solid white; }
+    height: 20rem; }
   .grid__container__contacto .grid__dos__texto {
     grid-row: 5/6;
     grid-column: 1/1;
-    width: 20rem;
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border: solid white; }
+    width: 20rem; }
   .grid__container__contacto .grid__tres__texto {
     grid-row: 6/7;
     grid-column: 1/1;
     width: 20rem;
-    font-size: 0.5rem;
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border: solid white; }
+    font-size: 0.5rem; }
   .textoGrid1 {
     font-size: 1rem; }
   .textoGrid {
@@ -1325,26 +1193,20 @@ span a:hover {
     font-size: 1.1rem;
     text-align: center;
     margin-top: 2rem;
-    margin-left: 6rem;
-    margin-right: 1rem; }
+    margin-left: 1rem;
+    margin-right: 2rem; }
   .imput {
-    background-color: #1d2925;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     font-size: 2rem;
     padding: 1rem;
-    width: 25rem;
+    width: 23rem;
     height: 18rem;
-    text-align: center;
     margin-left: 2rem;
     margin-right: 2rem;
     margin-top: 2rem;
     margin-bottom: 1.5rem; }
   .imput .contacto__imput {
     font-size: 1rem;
-    padding: 0.50rem;
-    color: white; } }
+    padding: 0.50rem; } }
 
 * {
   margin: 0px;
