--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -22,7 +22,7 @@
   margin-right: 8rem; 
   }
 
-.container-fluid1  .grid__item .grid__uno {
+.container-fluid1 .grid__uno {
   grid-row: 1/2;
   grid-column: 1/2;
   background-position: inherit;
@@ -30,7 +30,7 @@
   background-repeat: no-repeat; 
   }
   
-.container-fluid1  .grid__item .grid__dos {
+.container-fluid1 .grid__dos {
   grid-row: 1/2;
   grid-column: 2/3;
   background-position: inherit;
@@ -89,7 +89,7 @@
 
 .imagenActitud {
   width: 40rem;
-  height: 30rem;
+  height: 25rem;
   border: solid wheat;
   border-radius: 5% ;
   } 
@@ -159,20 +159,14 @@
     margin-right: 1rem; 
     }
   
-  .container-fluid1  .grid__item .grid__uno {
-      grid-row: 1/2;
-      grid-column: 1/1;
-      background-position: inherit;
-      background-size: cover;
-      background-repeat: no-repeat; 
-      }
+  .container-fluid1 .grid__uno {
+    grid-row: 1/2;
+    grid-column: 1/1;
+    }
     
-  .container-fluid1 .grid__item .grid__dos {
+  .container-fluid1 .grid__dos {
     grid-row: 2/3;
     grid-column: 1/1;
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat; 
     }
 
   .container__texto{
@@ -185,7 +179,6 @@
     padding-bottom: 1rem;
     gap:2rem;
     }
-
 
   .actitudTituloh3{
     color:white ;
@@ -206,7 +199,7 @@
     margin-right: 1rem; 
     }
 
-  .grid__container__actitud3 .grid__item.grid__dos {
+  .grid__container__actitud3 .grid__dos {
     margin-right: 1rem;
     grid-row: 2/3;
     grid-column: 1/1;
@@ -218,15 +211,15 @@
     margin-right: 1rem;
     }
     
-  .grid__container__actitud3 .grid__item .grid__uno {
-     grid-row: 1/2;
-     grid-column: 1/1;
-       }
+  .grid__container__actitud3 .grid__uno {
+    grid-row: 1/2;
+    grid-column: 1/1;
+    }
        
   .imagenActitud {
-        width: 35rem;
-        height: 20rem;
-       } 
+    width: 35rem;
+    height: 20rem;
+    } 
 
   .linkContactoActitud {
     font-size: 1.4rem;
@@ -241,14 +234,7 @@
     margin-left:13rem ;
     padding: 0.5rem;
     }
-                  
-  .btn__actitud__texto{
-    color:black;
-    &:hover{
-    color:white;
-      }
-    }    
-  
+    
   }
 
 @media (min-width: 320px) and (max-width: 540px) {
@@ -279,12 +265,12 @@
     margin-right: 1rem; 
     }
   
-  .container-fluid1  .grid__item .grid__uno {
+  .container-fluid1 .grid__uno {
     grid-row: 1/2;
     grid-column: 1/1;
     }
     
-  .container-fluid1 .grid__item .grid__dos {
+  .container-fluid1 .grid__dos {
     grid-row: 2/3;
     grid-column: 1/1;
     }
@@ -312,7 +298,7 @@
   .container__actitud3{
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 15rem 30rem;
+    grid-template-rows: 15rem 19rem;
     gap: 1rem;
     padding-top: 2rem;
     padding-bottom: 0.10rem;
@@ -325,12 +311,12 @@
     height: 5rem;
      }
     
-  .grid__container__actitud3 .grid__item .grid__uno {
+  .grid__container__actitud3 .grid__uno {
     grid-row: 1/2;
     grid-column: 1/1;
     }
 
-  .grid__container__actitud3 .grid__item.grid__dos {
+  .grid__container__actitud3.grid__dos {
     grid-row: 2/3;
     grid-column: 1/1;
     }
@@ -349,28 +335,14 @@
      }  
       
   .btn__actitud{
-    background-color:white;
     width: $ancho/2.5;
     height:$alto/2.5 ;
-    color:black;
     font-size: 1.5rem;
     padding: 0.75rem;
     border-radius:10rem;
     margin-left:10rem;
     margin-right: 15rem ;
     margin-bottom: 3rem;
-    &:hover {  
-      transform: scale(1.20);
-      background-color:rgb(29, 41, 37);
-      padding:1rem ;
-      }
-    } 
-                  
-  .btn__actitud__texto{
-    color:black;
-    &:hover{
-    color:wheat
-      }
-    }    
-  
+     } 
+    
    }  
