--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -110,7 +110,7 @@
   padding: 1rem;
   }
 
-.grid__container__nosotros2.grid__item .grid__uno{
+.grid__container__nosotros2.grid__uno{
   grid-row: 1/2;
   grid-column: 1/2;
   background-position: inherit;
@@ -158,7 +158,7 @@
   }
   
 .imagenCaphai{
-  width: 32rem;
+  width: 42rem;
   height: 25rem;
   border-radius:5% ;
   } 
@@ -225,11 +225,8 @@
     margin-left: 0.5rem;
     margin-right: 0.5rem;
     margin-top: 0.5rem;;
-    .grid__texto{
-      font-size:1.5rem;
-      color: rgb(250, 243, 243);   
-      }  
-    }
+     }
+
   .nosotrosTituloh3{
     font-size: 1.25rem;
     padding: 2rem; 
@@ -258,25 +255,24 @@
     font-size: 0.9rem;
     }  
  
-    .p__link{   
-      width: 15rem;
-      height: 5rem;
-      margin-left: 10rem ;
-      }
+  .p__link{   
+    width: 15rem;
+    height: 5rem;
+    margin-left: 10rem ;
+    }
 
- .linkContactoNosotros{   
+  .linkContactoNosotros{   
     font-size: 1.4rem;
     margin-left: 1rem;
     text-align: center;
     }
-
   
-    .btn__nosotros{
-      width: $ancho/2.2;
-      height:$alto/2.2 ;
-      margin-left:13rem ;
-      padding: 0.5rem;
-      }
+  .btn__nosotros{
+    width: $ancho/2.2;
+    height:$alto/2.2 ;
+    margin-left:13rem ;
+    padding: 0.5rem;
+    }
 
   }
   
@@ -290,11 +286,11 @@
   .grid__container__nosotros1{
     display:grid;
     grid-template-columns:50% 50%;
-    grid-template-rows: 12rem 12rem 15rem;
-    gap: 1rem;
+    grid-template-rows: 12rem 12rem 12rem;
+    gap: 0.5rem;
     padding-top: 0.25rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     }
@@ -336,45 +332,31 @@
   .grid__container__nosotros2.grid__uno{
     grid-row: 1/2;
     grid-column: 1/1;
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    } 
+     } 
 
   .grid__container__nosotros2  .grid__dos{
     grid-row: 2/3;
     grid-column: 1/1;
     background-image: url("../recursos/nosotros_5.jpg");
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    }
+     }
 
   .grid__container__nosotros2  .grid__cuatro{
     grid-row: 3/4;
     grid-column: 1/1;
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    }
+     }
 
   .grid__container__nosotros2 .grid__tres{
     grid-row: 4/5;
     grid-column: 1/1;
     background-image: url("../recursos/nosotros_6.png");
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    }
+     }
 
   .grid__container__nosotros2  .grid__cinco .p__link{
     grid-row: 5/6;
     grid-column: 1/1;
     background-image: url("../recursos/caphai.png");
-    background-position: inherit;
-    background-size: cover;
-    background-repeat: no-repeat;
-    }
+     }
+     
   .imagenCaphai{
     width: 20em;
     height: 15rem;
@@ -395,30 +377,17 @@
     text-align: center;
     }
     
-    .btn__nosotros{
-      background-color: white;
-      width: $ancho/2.5;
-      height:$alto/2.5 ;
-      color:black;
-      font-size: 1.5rem;
-      padding: 0.75rem;
-      border-radius:10rem;
-      margin-left:9rem;
-      margin-right: 15rem ;
-      margin-bottom: 3rem;
-        &:hover {  
-        transform: scale(1.20);
-        background-color:rgb(29, 41, 37);
-        padding:1rem ;
-         }
-        } 
+  .btn__nosotros{
+    height:$alto/2.5 ;
+    color:black;
+    font-size: 1.5rem;
+    padding: 0.75rem;
+    margin-left:9rem;
+    margin-right: 15rem ;
+    margin-bottom: 3rem;
+    } 
     
-    .btn__nosotros__texto{
-      color:black;
-        &:hover{
-        color:white;
-        }
-       }
+    
   }
     
   
