--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,20 +1,20 @@
 .key1-contacto {
   background-image: url("..recursos/contacto/contacto__1.jpg");
-  width: 31rem;
+  width: 30rem;
   height: 25rem;
   border: 1rem;
   border-radius: 3rem; }
 
 .key2-contacto {
   background-image: url("..recursos/contacto/contacto__2.jpg");
-  width: 31rem;
+  width: 30rem;
   height: 25rem;
   border: 1rem;
   border-radius: 3rem; }
 
 .key3-contacto {
   background-image: url("..recursos/contacto/contacto__5.jpg");
-  width: 31rem;
+  width: 30rem;
   height: 25rem;
   border: 1rem;
   border-radius: 3rem; }
@@ -58,8 +58,7 @@ a {
 
 @media (min-width: 541px) and (max-width: 720px) {
   header {
-    height: 8rem;
-    background-color: black; }
+    height: 8rem; }
   .header {
     display: flex;
     flex-direction: row; }
@@ -73,8 +72,7 @@ a {
     margin-right: 0.5rem;
     padding-top: 1rem;
     width: 20rem;
-    height: 6rem;
-    background-color: black; }
+    height: 6rem; }
   .tituloh1 {
     font-size: 1.25rem; }
   .header__logo {
@@ -144,7 +142,7 @@ p a:hover {
 
 .indexTituloh2 {
   margin-left: 6rem;
-  margin-top: 2.1rem;
+  margin-top: 2rem;
   margin-bottom: 2rem;
   text-align: center; }
 
@@ -193,9 +191,9 @@ p a:hover {
     margin-top: 0.25rem;
     margin-bottom: 0.25rem; }
   .carousel {
-    width: 18rem;
-    height: 9rem;
-    margin-left: 0.1rem;
+    width: 21rem;
+    height: auto;
+    margin-left: 0.5rem;
     margin-right: 0.1rem;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem; }
@@ -213,7 +211,7 @@ p a:hover {
 .nosotrosTituloh3 {
   text-align: center;
   color: white;
-  padding: 1.1rem;
+  padding: 1rem;
   margin-bottom: 1.5rem; }
 
 .nosotrosTituloh4 {
@@ -241,8 +239,7 @@ p a:hover {
   background-position: center;
   padding-top: 1rem;
   margin-left: 5rem;
-  margin-right: 5rem;
-  background-color: black; }
+  margin-right: 5rem; }
   .container__nosotros1__uno {
     grid-row: 1/2;
     grid-column: 1/2;
@@ -704,26 +701,24 @@ p a:hover {
     padding-top: 2rem;
     padding-bottom: 2rem; }
   .imagenActitud1 {
-    width: 16rem;
+    width: 20rem;
     height: auto;
     margin-left: 1rem; }
   .container__actitud1 {
-    background-color: black;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 25rem 10rem;
+    grid-template-rows: 24rem 13rem;
     gap: 1rem;
-    padding-bottom: 0.10rem;
     margin-left: 1rem;
     margin-right: 1rem;
     margin-bottom: 1rem; }
     .container__actitud1__uno {
       grid-row: 1/2;
-      grid-column: 1/1;
-      margin-left: 1rem; }
+      grid-column: 1/1; }
     .container__actitud1__dos {
       grid-row: 2/3;
-      grid-column: 1/1; }
+      grid-column: 1/1;
+      justify-items: center; }
     .container__actitud1__texto {
       font-size: 1rem;
       text-align: justify; }
@@ -761,14 +756,14 @@ p a:hover {
       grid-row: 2/3;
       grid-column: 1/1; }
   .imagenActitud {
-    width: 18rem;
+    width: 20rem;
     height: auto; } }
 
 .container__contacto {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 25rem 25rem 5rem;
-  margin-left: 1.1rem;
+  margin-left: 1rem;
   margin-right: 6rem;
   gap: 3rem;
   justify-items: center;
@@ -962,17 +957,17 @@ p a:hover {
     width: 17rem;
     height: 17rem; }
   .container__contacto {
-    background-color: black;
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 27rem 18rem 18rem 4rem 5rem;
+    grid-template-rows: 18rem 29rem 18rem 18rem 5rem 5rem;
     justify-items: left;
     align-items: left;
     padding: 0.5rem;
     margin-top: 0.5rem;
-    margin-right: 2rem;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
     gap: 0.50rem;
     width: 19rem;
-    height: 93rem; }
+    height: 95rem; }
     .container__contacto__uno {
       align-content: center;
       grid-row: 1/2;
@@ -1018,7 +1013,7 @@ p a:hover {
     font-size: 1.5rem;
     padding: 0.5rem;
     width: 18rem;
-    height: 27rem;
+    height: 29rem;
     margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 2rem;
@@ -1071,8 +1066,7 @@ p {
   text-align: center;
   color: white;
   padding: 0.5rem;
-  margin-bottom: 0.5rem;
-  background-color: black; }
+  margin-bottom: 0.5rem; }
 
 .link {
   height: 13rem;
@@ -1128,9 +1122,8 @@ p {
     font-size: 1.3rem;
     text-align: center;
     color: white;
-    padding: 0.75rem;
-    margin-bottom: 0.5rem;
-    background-color: black; }
+    padding-top: 0.75rem;
+    margin-bottom: 0.5rem; }
   .link {
     height: 11rem;
     margin-left: 1rem; }
@@ -1146,7 +1139,7 @@ p {
     font-size: 1.25rem;
     padding: 0.25rem;
     border-radius: 10rem;
-    margin-left: 6rem; }
+    margin-left: 7.5rem; }
     .btn:hover {
       transform: scale(1.1);
       padding: 0.5rem; } }
