--- a/scss/_Index.scss
+++ b/scss/_Index.scss
@@ -1,6 +1,6 @@
 .indexTituloh2{
   margin-left: 6rem;
-  margin-top: 2.1rem;
+  margin-top: 2rem;
   margin-bottom: 2rem;
   text-align: center;
    }
@@ -67,9 +67,9 @@
     }
 
   .carousel{
-    width: 18rem ;
-    height:9rem ;
-    margin-left: 0.1rem;
+    width: 21rem ;
+    height:auto ;
+    margin-left: 0.5rem;
     margin-right: 0.1rem;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
