--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -212,18 +212,16 @@
     }
 
   .imagenActitud1 {
-      width: 16rem;
+      width: 20rem;
       height: auto;
       margin-left: 1rem;
       }     
 
   .container__actitud1 {
-    background-color: black;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 25rem 10rem;
+    grid-template-rows: 24rem 13rem;
     gap: 1rem;
-    padding-bottom: 0.10rem;
     margin-left: 1rem;
     margin-right: 1rem;
     margin-bottom: 1rem;
@@ -231,12 +229,12 @@
     &__uno {
       grid-row: 1/2;
       grid-column: 1/1;
-      margin-left: 1rem;
        }
       
     &__dos {
       grid-row: 2/3;
       grid-column: 1/1;
+      justify-items: center;
       }
     
     &__texto{
@@ -297,7 +295,7 @@
    }
   
   .imagenActitud {
-    width: 18rem;
+    width: 20rem;
     height: auto;
     }
 
