--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 25rem 25rem 5rem;
-  margin-left: 1.1rem;
+  margin-left: 1rem;
   margin-right: 6rem;
   gap: 3rem;
   justify-items: center;
@@ -260,17 +260,17 @@
     }  
   
   .container__contacto {
-   background-color: black;
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 27rem 18rem 18rem 4rem 5rem;
+    grid-template-rows: 18rem 29rem 18rem 18rem 5rem 5rem;
     justify-items: left;
     align-items: left;
     padding: 0.5rem;
     margin-top: 0.5rem;
-    margin-right: 2rem;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
     gap: 0.50rem;
     width: 19rem;
-    height:93rem;
+    height:95rem;
 
     &__uno {
       align-content: center;
@@ -336,7 +336,7 @@
     font-size: 1.5rem;
     padding: 0.5rem;
     width: 18rem;
-    height: 27rem;
+    height: 29rem;
     margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 2rem;
