--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,8 +49,7 @@ p {
   color: white;
   padding: 0.5rem;
   margin-bottom: 0.5rem ;
-  background-color: black;
-  }
+   }
 
 .link{
   height:13rem;
@@ -124,10 +123,9 @@ p {
     font-size: 1.3rem;
     text-align: center;  
     color: white;
-    padding: 0.75rem;
+    padding-top: 0.75rem;
     margin-bottom: 0.5rem ;
-    background-color: black;
-    }
+     }
 
   .link{
     height: 11rem;
@@ -149,7 +147,7 @@ p {
     font-size: 1.25rem;
     padding: 0.25rem;
     border-radius:10rem;
-    margin-left:6rem;
+    margin-left:7.5rem;
     &:hover {  
       transform: scale(1.10);
       padding:0.5rem ;
