--- a/css/estilos.css
+++ b/css/estilos.css
@@ -191,7 +191,7 @@ p a:hover {
     margin-top: 0.25rem;
     margin-bottom: 0.25rem; }
   .carousel {
-    width: 21rem;
+    width: 23rem;
     height: auto;
     margin-left: 0.5rem;
     margin-right: 0.1rem;
@@ -450,7 +450,7 @@ p a:hover {
   .p__link {
     width: 10rem;
     height: 3rem;
-    margin-left: 5rem; } }
+    margin-left: 5.5rem; } }
 
 .container__galeria {
   display: grid;
@@ -829,7 +829,7 @@ p a:hover {
     border: solid white; }
 
 .textoGrid1 {
-  font-size: 1.35rem; }
+  font-size: 1.30rem; }
 
 .textoGrid2 {
   font-size: 1.5rem; }
@@ -859,6 +859,9 @@ p a:hover {
     font-size: 1.5rem;
     padding: 0.50rem;
     color: white; }
+  .imput__contacto1 {
+    font-size: 1.5rem;
+    padding-left: 1.5rem; }
   .imput__contacto__uno {
     padding: 0.50rem;
     height: 2rem;
@@ -930,15 +933,19 @@ p a:hover {
   .imput {
     font-size: 2rem;
     padding: 1rem;
-    width: 30rem;
+    width: 28rem;
     height: 22rem;
-    margin-left: 3rem;
+    margin-left: 3.5rem;
     margin-right: 3rem;
     margin-top: 2rem;
     margin-bottom: 2rem; }
     .imput__contacto {
       font-size: 1.25rem;
-      padding: 0.50rem; } }
+      padding: 0.50rem; }
+    .imput__contacto1 {
+      font-size: 1.25rem;
+      padding-left: 2rem;
+      text-align: left; } }
 
 @media (min-width: 320px) and (max-width: 540px) {
   .contactoTituloh2 {
@@ -958,16 +965,16 @@ p a:hover {
     height: 17rem; }
   .container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 29rem 18rem 18rem 5rem 5rem;
+    grid-template-rows: 18rem 30rem 18rem 18rem 6rem 6rem;
     justify-items: left;
     align-items: left;
     padding: 0.5rem;
     margin-top: 0.5rem;
     margin-bottom: 1rem;
-    margin-right: 1rem;
+    margin-left: 2rem;
     gap: 0.50rem;
     width: 19rem;
-    height: 95rem; }
+    height: 100rem; }
     .container__contacto__uno {
       align-content: center;
       grid-row: 1/2;
@@ -1014,7 +1021,7 @@ p a:hover {
     padding: 0.5rem;
     width: 18rem;
     height: 29rem;
-    margin-left: 1rem;
+    margin-left: 2rem;
     margin-right: 1rem;
     margin-top: 2rem;
     margin-bottom: 3rem; }
@@ -1023,6 +1030,7 @@ p a:hover {
       padding: 0.50rem;
       text-align: left; }
     .imput__contacto1 {
+      flex-direction: column;
       font-size: 1rem;
       padding: 0.50rem;
       text-align: left; }
@@ -1122,7 +1130,7 @@ p {
     font-size: 1.3rem;
     text-align: center;
     color: white;
-    padding-top: 0.75rem;
+    padding-top: 1rem;
     margin-bottom: 0.5rem; }
   .link {
     height: 11rem;
@@ -1131,8 +1139,7 @@ p {
     font-size: 1.25rem;
     padding-top: 1rem;
     padding-bottom: 2rem;
-    text-align: center;
-    margin-left: 1rem; }
+    text-align: center; }
   .btn {
     width: 6.66667rem;
     height: 3.33333rem;
