--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -82,7 +82,7 @@
 
 
 .textoGrid1 {
-  font-size: 1.35rem;
+  font-size: 1.30rem;
      }
 
 .textoGrid2 {
@@ -117,6 +117,13 @@
     padding: 0.50rem;
     color: white; 
     }
+
+  &__contacto1 {
+    font-size: 1.5rem;
+    padding-left: 1.5rem;
+    
+     }
+
 
   &__contacto__uno {
   padding: 0.50rem;
@@ -219,9 +226,9 @@
   .imput {
     font-size: 2rem;
     padding: 1rem;
-    width: 30rem;
+    width: 28rem;
     height: 22rem;
-    margin-left: 3rem;
+    margin-left: 3.5rem;
     margin-right: 3rem;
     margin-top: 2rem;
     margin-bottom: 2rem; 
@@ -230,6 +237,13 @@
       font-size: 1.25rem;
       padding: 0.50rem;
        }
+    &__contacto1 {
+      font-size: 1.25rem;
+      padding-left: 2rem;
+      text-align: left;
+         }  
+
+
     }
  
   }
@@ -261,16 +275,16 @@
   
   .container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 29rem 18rem 18rem 5rem 5rem;
+    grid-template-rows: 18rem 30rem 18rem 18rem 6rem 6rem;
     justify-items: left;
     align-items: left;
     padding: 0.5rem;
     margin-top: 0.5rem;
     margin-bottom: 1rem;
-    margin-right: 1rem;
+    margin-left: 2rem;
     gap: 0.50rem;
     width: 19rem;
-    height:95rem;
+    height:100rem;
 
     &__uno {
       align-content: center;
@@ -337,7 +351,7 @@
     padding: 0.5rem;
     width: 18rem;
     height: 29rem;
-    margin-left: 1rem;
+    margin-left: 2rem;
     margin-right: 1rem;
     margin-top: 2rem;
     margin-bottom: 3rem; 
@@ -349,11 +363,11 @@
          }
 
     &__contacto1 {
+      flex-direction: column;
       font-size: 1rem;
       padding: 0.50rem;
       text-align: left;
-     
-      }
+       }
 
   
     &__contacto__uno {
