--- a/css/estilos.css
+++ b/css/estilos.css
@@ -341,7 +341,7 @@ p a:hover {
 .p__link {
   width: 25rem;
   height: 7rem;
-  margin-left: 25rem; }
+  margin-left: 30rem; }
 
 @media (min-width: 541px) and (max-width: 720px) {
   .nosotrosTituloh2 {
@@ -458,7 +458,8 @@ p a:hover {
   grid-template-rows: 15rem 15rem 15rem 15rem;
   grid-template-areas: "uno dos tres"  "uno cuatro cinco" "seis cuatro ocho" "seis cuatro ocho";
   gap: 1rem;
-  margin-left: 5.1rem;
+  margin-top: 1rem;
+  margin-left: 5rem;
   margin-right: 5rem;
   margin-bottom: 2rem; }
   .container__galeria__uno {
@@ -641,7 +642,6 @@ p a:hover {
     border-radius: 5%;
     margin-left: 2rem; }
   .container__actitud1 {
-    background-color: black;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 20rem;
@@ -935,7 +935,7 @@ p a:hover {
     padding: 1rem;
     width: 28rem;
     height: 22rem;
-    margin-left: 3.5rem;
+    margin-left: 6rem;
     margin-right: 3rem;
     margin-top: 2rem;
     margin-bottom: 2rem; }
@@ -1074,7 +1074,7 @@ p {
   text-align: center;
   color: white;
   padding: 0.5rem;
-  margin-bottom: 0.5rem; }
+  margin-bottom: 1rem; }
 
 .link {
   height: 13rem;
