--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -7,7 +7,8 @@
  "seis cuatro ocho"
  "seis cuatro ocho";
   gap: 1rem;
-  margin-left: 5.1rem;
+  margin-top: 1rem;
+  margin-left: 5rem;
   margin-right: 5rem;
   margin-bottom: 2rem;
 
